<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/daytime_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/font_green"
            android:padding="4dp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/daytime" />

        <TextView
            android:id="@+id/dish_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daytime_text_view"
            tools:text="@string/dish" />

        <TextView
            android:id="@+id/component_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dish_text_view"
            tools:text="@string/component" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#616161"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/component_text_view"
            tools:text="3,75 €" />

        <ImageView
            android:id="@+id/icon_image_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/component_text_view"
            tools:src="@drawable/fb" />

        <ImageView
            android:id="@+id/icon_image_view1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/icon_image_view"
            app:layout_constraintTop_toBottomOf="@+id/component_text_view"
            tools:src="@drawable/bio" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:theme="@style/RatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:minHeight="24dp"
            android:maxHeight="24dp"
            android:padding="8dp"
            android:numStars="6"
            android:stepSize="1.0"
            android:isIndicator="false"
            android:clickable="true"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_image_view" />

        <TextView
            android:id="@+id/likes_counter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/price_text_view"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            tools:text="12" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>